# RelayController2

./: .gitignore  CMakeLists.txt  Makefile  key.txt  new.txt  partitions.csv  sdkconfig  sdkconfig.old  tmp.c  usb.txt
html/: config.html
main/: CMakeLists.txt  bconfig.c  bconfig.h  core.c  core.h  hardware.c  hardware.h  main.c  rs485.c  rs485.h
